adding redis repository to read_side features
